--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Infosys</string>
+    <string name="app_name">Wipro</string>
     <string name="title">Title</string>
     <string name="about">About Canada</string>
     <string name="no_internet">No Internet Available, please try to connect  once to store offline </string>
